<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">E-Lib</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="authors_name">Authors</string>
    <string name="books_name">Book</string>
    <string name="find">Find</string>
    <string name="books_authors">Authors</string>
    <string name="books_rooms">Rooms</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="add_data">Add data</string>
    <string name="inquiry_condition">Inquiry condition</string>
    <string name="insert">insert</string>
    <string name="edit">Edit</string>
    <string name="result">Found:</string>
    <string name="save">Save</string>

</resources>
