<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/relative_layout"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear_edit_view">

        <EditText
            android:hint="@string/insert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_to_find"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_chekboxs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_edit_view"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authors_name"
            android:layout_weight="1"
            android:id="@+id/authors_checkbox"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/books_name"
            android:layout_weight="1"
            android:id="@+id/books_checkbox"/>

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_chekboxs"
        android:id="@+id/buttons_linear"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/find_button"
            android:text="@string/find"/>

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list_view_linear_layout"
        android:layout_below="@+id/buttons_linear"
        android:layout_above="@+id/linear_layout_of_bottom">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_view"
            android:padding="16dp">
            </ListView>

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/linear_layout_of_bottom"
        android:weightSum="2">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/progress_bar"
            android:layout_weight="0.5"/>

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:gravity="left"
            android:layout_weight="1.5"/>

        </LinearLayout>


</RelativeLayout>
